Problem fixed